--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "horizon-ui-chakra",
   "version": "1.0.1",
-  "private": true,
+  "private": false,
   "dependencies": {
     "@chakra-ui/icons": "^1.1.5",
     "@chakra-ui/react": "1.8.8",
